--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             </div>
         </div>
     </div>
+    <button id="reset-btn">Reset Score</button>
 
     <script src="script/script.js"></script>
 </body>
