Upload via files
Changes:
- First set up to responsive devices

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="score-container">
         <div class="teams">
             <div class="team-select">
-                <label for="team-list">Team select:</label>
+                <label class="team-select" for="team-list">Team select:</label>
                 <select id="home-team-list" for="team-list">
                     <option value="los-angeles-lakers" selected>Los Angeles Lakers</option>
                     <option value="boston-celtics">Boston Celtics</option>
@@ -41,7 +41,7 @@
         </div>
         <div class="teams">
             <div class="team-select">
-                <label for="team-list">Team select:</label>
+                <label class="team-select" for="team-list">Team select:</label>
                 <select id="visitor-team-list" for="team-list">
                     <option value="los-angeles-lakers">Los Angeles Lakers</option>
                     <option value="boston-celtics">Boston Celtics</option>
